[package]
edition = "2021"
name = "bruh78"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
key-lib = {path = "../key_lib/", features = ["split"] }
embassy-futures = { version = "0.1.1" }
embassy-sync = { version = "0.7.1", features = ["defmt"] }
embassy-executor = { version = "0.8.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.6.0", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
    "nfc-pins-as-gpio",
] }

sequential-storage = "5.0.0"
embedded-storage-async = "*"

embassy-usb-logger = { version = "0.5.0" }

embassy-usb = { version = "0.5.0", features = ["defmt"] }
usbd-hid = "0.8.2"
defmt = "1.0.1"
defmt-rtt = "1.0.0"

static_cell = { version = "2.1.1" }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures = { version = "0.3.31", default-features = false, features = [
    "async-await",
] }
rand = { version = "0.9.2", default-features = false }
embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
heapless = "0.9.1"
serde = { version = "1.0.219", default-features = false }
ssmarshal = { version = "1.0.0", default-features = false }
log = "0.4.27"
num_enum = {version = "0.7.4", default-features = false }

assign-resources = "0.5.0"

[profile.release]
debug = 2
